<resources>
    <string name="app_name">ScottAllenCourseworkCM3110</string>
    <string name="business_address">Business Address</string>
    <string name="opening_hours">Opening hours</string>
    <string name="aggregate_rating">Aggregate Rating</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="delete_from_favourites">Delete From Favourites</string>
    <string name="search">Search</string>
    <string name="business_name">Business Name</string>
    <string name="description">Description</string>
    <string name="view_in_maps">View in Maps</string>
    <string name="favourites">Favourites</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="my_favourites">My Favourites</string>
    <string name="results_for">Results for</string>
</resources>